# site-backend

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  manage.py  pyproject.toml  render.yaml
.github/workflows/: linter-and-tests.yml
app/: helpers.py  settings.py  urls.py
app/goods/: admin.py  apps.py  fields.py  models.py  serializers.py  views.py
app/goods/migrations/: 0001_initial.py  0002_alter_category_options_alter_good_options_and_more.py  0002_alter_good_availability.py  0003_category_slug_good_slug.py  0004_alter_category_slug_alter_good_slug.py
app/goods/tests/: test_category_view.py  test_good_view.py
app/goods/tests/factories/: category_factory.py  good_factory.py
app/orders/: admin.py  apps.py  mailer.py  models.py  serializers.py  signals.py  views.py
app/orders/migrations/: 0001_initial.py  0002_alter_orderitem_options_alter_orderitem_price_and_more.py  0002_orderitem_price.py
app/orders/tests/: test_order_post.py  test_order_view.py
site_backend/: asgi.py  settings.py  urls.py  wsgi.py
site_backend/categories/: apps.py  models.py  serializers.py  views.py
site_backend/categories/migrations/: 0001_initial.py
site_backend/categories/test/: test_model.py  test_serializer.py  test_view.py
site_backend/goods/: apps.py  models.py  serializers.py
site_backend/goods/migrations/: 0001_initial.py
site_backend/goods/tests/: test_model.py
site_backend/goods/tests/factory/: good_factory.py
